cmake_minimum_required(VERSION 3.14)
project(2048)
set(CMAKE_CXX_STANDARD 17)
add_executable(2048 main.cpp Square.h Square.cpp Field.h Field.cpp Menu.h Menu.cpp)
set(SFML_ROOT C:/SFML-2.5.1)
set(SFML_STATIC_LIBRARIES FALSE)
#include_directories(${SFML_ROOT}/lib)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules")
set(CMAKE_EXE_LINKER_FLAGS "-static")
find_package(SFML 2 REQUIRED COMPONENTS system window graphics network
        audio)
if(SFML_FOUND)
    include_directories(C:/SFML-2.5.1/include)
    target_link_libraries(${PROJECT_NAME} ${SFML_LIBRARIES})
endif()
